--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,33 @@
+.jumbotron{
+  background: 
+  linear-gradient(
+    rgba(0, 0, 250, 0.25), 
+    rgba(125, 250, 250, 0.45)
+  ),
+  url("../images/conspiracy.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color:white !important;
+  height:100vh;
+  text-align: center;
+  font-family: 'Verdana', sans-serif;
+  font-weight: bold;
+  }
+
+.button {
+    display: inline-block;
+    border: 2px solid #fff;
+    padding: 10px 20px;
+    color: #fff;
+    text-decoration: none;
+    transition: 0.3s;
+  }
+  
+.button:hover {
+    background: #fff;
+    color: #000;
+  }
+
 .responsive-google-slides {
     position: relative;
     padding-bottom: 56.25%;
@@ -5,7 +35,7 @@
     overflow: hidden;
   }
   
-  .responsive-google-slides iframe {
+.responsive-google-slides iframe {
     border: 0;
     position: absolute;
     top: 0;
