--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,16 @@
-.jumbotron{
+body {
+  background-color: rgb(39, 39, 39);
+  color: white;
+  font-family: Arial, sans-serif;
+}
+
+a {
+  font-size: 40px; 
+  font-weight: bold;
+  font-family: Verdana, sans-serif;
+}
+
+.jumbotron {
   background: 
   linear-gradient(
     rgba(0, 0, 250, 0.25), 
@@ -11,10 +23,12 @@
   height:100vh;
   text-align: center;
   font-family: 'Verdana', sans-serif;
+  font-size: 30px;
   font-weight: bold;
   }
 
 .button {
+    background-color: Transparent;
     display: inline-block;
     border: 2px solid #fff;
     padding: 10px 20px;
@@ -22,7 +36,11 @@
     text-decoration: none;
     transition: 0.3s;
   }
-  
+
+.button1 {
+  border-radius: 12px;
+}
+
 .button:hover {
     background: #fff;
     color: #000;
