adding changed during office hrs

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
             <h1 class="display-1" >Are you a Conspiracy Theorist?</h1>
             <p class="lead">Determining an outcome through the use of machine learning</p>
             <br></br>
-            <button class="button button1" onclick="window.location.href='predictions.html';">PREDICT YOURSELF</button>
+            <button class="button button1" href='/predict' role='button'>PREDICT YOURSELF</button>
             <!-- <a href="#" class="button">PREDICT YOURSELF</a> -->
         </div>
         <div class="row">
