--- a/templates/index.html
+++ b/templates/index.html
@@ -9,23 +9,18 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;lang=en" />
     <link rel="stylesheet" href="../static/css/style.css">
-
-    <!-- jquery script for prediction button -->
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
 </head>
 
-<!-- <body class="text-light bg-dark"> -->
+
 <body>   
         <div class="jumbotron specialjum">
             <h1 class="display-1" >Are you a Conspiracy Theorist?</h1>
             <p class="lead">Determining an outcome through the use of machine learning</p>
             <br></br>
-            <button class="button button1" href='/predict' role='button'>PREDICT YOURSELF</button>
-            <!-- <a href="#" class="button">PREDICT YOURSELF</a> -->
+            <a href='/predict' class='button'>PREDICT YOURSELF</a>
+            
         </div>
         <div class="row">
             <div class="col-sm-6">
@@ -56,9 +51,10 @@
 
     <!-- Link to JS file, d3, and plotly-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+    <script src=“https://code.jquery.com/jquery-3.3.1.slim.min.js” integrity=“sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo” crossorigin=“anonymous”></script>
+    <script src=“https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js” integrity=“sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM” crossorigin=“anonymous”></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="../static/js/app.js"></script>
-    <script src="../static/css/style.css"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 </body>
