--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -9,17 +9,12 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;lang=en" />
     <link rel="stylesheet" href="../static/css/style.css">
-
-    <!-- jquery script for prediction button -->
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
 </head>
 
 <body>   
-         <h2> How much of a Conspiracy Theorist are you?? Test Your Luck With Our Prediction Model</h2>
+        <h2> How much of a Conspiracy Theorist are you?? Test Your Luck With Our Prediction Model</h2>
         <h6 id="instructions">Select your features, "CLICK TO Calculate"</h6>
         <br>
 
@@ -31,11 +26,13 @@
                     <div class="col-sm-3">
                         <ul class="list-group bg-dark">
 
-                            <label for="age">Age:</label>
-                            <i>Default value = 13</i>
-                            
-                            <input class=“form-control” list='age' id='age_id' name='age'>
-                                <datalist id="age_input">
+                            <div class=“form-input” id=“age_input”>
+                                <label for=“age”>Your Age</label>
+                                <span>
+                                    <i class=“fa fa-users fa” aria-hidden=“true”></i>
+                                </span>
+                                <i>Default value = 1</i>
+                                <select id=“age” name=‘age’ value=“1”>
                                     <option selected>Please Make A Selection:</option>
                                     <option value="13">13</option>
                                     <option value="14">14</option>
@@ -68,32 +65,36 @@
 
                                 
 
-                                </datalist>
-                            <!-- <br><br>
+                                </select>
+                            </div>
+                             <br><br>
 
-                            <label for="religion">Religion:</label>
-                            <i>Default value = Agnostic</i>
-
-                            <select name="religion" id="religion">
-                                <option selected>Please Make A Selection:</option>
-                                <option value="1">Agnostic</option>
-                                <option value="2">Atheist</option>
-                                <option value="3">Buddhist</option>
-                                <option value="4">Christian (Catholic)</option>
-                                <option value="5">Christian (Mormon)</option>
-                                <option value="6">Christian (Protestant)</option>
-                                <option value="7">Christian (Other)</option>
-                                <option value="8">Hindu</option>
-                                <option value="9">Jewish</option>
-                                <option value="10">Muslim</option>
-                                <option value="11">Sikh</option>
-                                <option value="12">Other</option>
+                            <div class="form-input" id="religion_input">
+                                <label for="religion">Your Religion</label>
+                                <span>
+                                    <i class="fa fa-users fa" aria-hidden="true"></i>
+                                </span>
+                                <i>Default value = Agnostic</i>
+                                <select name="religion" id="religion" value="Agnostic">
+                                    <option selected>Please Make A Selection:</option>
+                                    <option value="1">Agnostic</option>
+                                    <option value="2">Atheist</option>
+                                    <option value="3">Buddhist</option>
+                                    <option value="4">Christian (Catholic)</option>
+                                    <option value="5">Christian (Mormon)</option>
+                                    <option value="6">Christian (Protestant)</option>
+                                    <option value="7">Christian (Other)</option>
+                                    <option value="8">Hindu</option>
+                                    <option value="9">Jewish</option>
+                                    <option value="10">Muslim</option>
+                                    <option value="11">Sikh</option>
+                                    <option value="12">Other</option>
                               
 
-                            </select>
+                                </select>
                             <br><br>
 
-                            <label for="fam_size">Family Size:</label>
+                            <!-- <label for="fam_size">Family Size:</label>
                             <i>Default value = 1 Child</i>
 
                             <select name="fam_size" id="fam_size">
@@ -223,7 +224,7 @@
                                 <option value="2">Currently Married</option>
                                 <option value="3">Previously Married</option>
                             </select>
-                            <br><br> -->
+                            <br><br>  -->
 
                             
                             <!-- predition & reset buttons -->
@@ -232,18 +233,19 @@
                             <input id="reset" type="reset" value="reset selections"
                                 onclick="document.getElementById('prediction').innerText=''">
                         </ul>
-                    </div>
-                    <div class="col-md-3"> -->
+                    </div> -->
 
-                        <!-- adding Polaroid effect to the dummy & prediction result-->
+                    <div class="col-md-3"> 
+                            <!-- adding Polaroid effect to the dummy & prediction result-->
 
-                        <!-- <div id="polaroid" class="polaroid">
+                        <div id="polaroid" class="polaroid">
                             <img id="dummy" src="../static/images/aliens.gif">
                             <div class="container">
-                                <h2 id="prediction">{{ prediction }}</h2>
+                                <h2 id="prediction">{{ output }}</h2>
                             </div>
-                        </div> -->
-                    <!-- </div> -->
+                        </div> 
+                    </div>
+                   
                 </div>
                 <button type='submit' class='btn btn-info'>Submit</button>
             </form>
@@ -252,35 +254,17 @@
     </div>
     <h3 id="learn">Would you like to learn more about the (GCB) Generic Conspiracisy Beliefs Scale?</h3>
     <h3><a href="https://www.frontiersin.org/articles/10.3389/fpsyg.2013.00279/full">* Visit the Original Research Article to Learn More *</a></h3>
-    
-    <!-- prediction result without refreshing the entire page -->
 
-    <script>
-        // function refresh() {
-        //     const prediction_button = document.getElementById("predict");
-        //     prediction_button.onclick = function (event) {
-        //         event.preventDefault();
-        //         $.ajax({
-        //             url: '/predict',
-        //             type: 'post',
-        //             data: $('#selectionForm').serialize(),
-        //             success: function (data) {
-        //                 console.log(data)
-        //                 $("#prediction").html(data)
-        //             }
-        //         });
-        //     }
-        // }
-        // refresh()
-    </script>
+
     </div>
 
     <!-- Link to JS file, d3, and plotly-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="../static/js/app.js"></script>
-    <script src="../static/css/style.css"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src=“https://code.jquery.com/jquery-3.3.1.slim.min.js” integrity=“sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo” crossorigin=“anonymous”></script>
+    <script src=“https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js” integrity=“sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM” crossorigin=“anonymous”></script>
 
 </body>
 
