--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,6 +28,18 @@ a {
   font-weight: bold;
   }
 
+.jumbotron2 {
+  background: 
+  linear-gradient(
+    rgba(0, 0, 250, 0.25), 
+    rgba(125, 250, 250, 0.45)
+  );
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+} 
+
+
 .button {
     background-color: Transparent;
     display: inline-block;
