--- a/templates/index.html
+++ b/templates/index.html
@@ -22,15 +22,9 @@
             <a href='/predict' class='button'>PREDICT YOURSELF</a>
             
         </div>
+
         <div class="row">
-            <div class="col-sm-6">
-                <br><br>
-                <!-- Google slideshow - responsive elements in CSS -->
-                <div class="responsive-google-slides">
-                  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTdHJkogkY0tkdhV5SOKJmvHHzPQuNlN87-csbSyKG60HBrvzUO13uedlbzxgoCYOaXXlT9pBVvUh5g/embed?start=false&loop=false&delayms=3000" 
-                    frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-                </div>
-            </div>
+            <!--Background Info Block-->
             <div id="description" class="col-sm-6">
                 <br></br>
                 <a> Background of Data:</a><br><br>
@@ -44,10 +38,69 @@
                     <li>Is there a pattern of specific types of answers that lead to a Higher or Lower score?</li>
                 </ul>
             </div>
+
+            <!-- Google slideshow - responsive elements in CSS -->
+            <div class="col-sm-6">
+                <br><br>
+                <div class="responsive-google-slides">
+                  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTdHJkogkY0tkdhV5SOKJmvHHzPQuNlN87-csbSyKG60HBrvzUO13uedlbzxgoCYOaXXlT9pBVvUh5g/embed?start=false&loop=false&delayms=3000" 
+                    frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                </div>
+            </div>
         </div>
+        <br><br><br>
+
+        <!--Intro to graphs-->
+        <div class="jumbotron2">
+            <div class='col-md-12'>
+                <br>
+                <a>Visualizations of Dataset:</a>
+                <!--FILLER TEXT!!! NEED DESCRIPTIONS-->
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+        <br><br>
         
-        <br><br><br>
-        <br><br><br>
+        <!--DESCRIPTION OF Religion GRAPH-->
+        <h3 style='padding:10px'>Scores Based on Religion:</h3> 
+                <div class='col-md-6'>
+                    <p>
+                        This chart shows the average scores of each conspiracy theory for each type of religion. The size of the bubbles indicate how many of the respondents identified with that particular religion. The scale was based on the average scores for each conspiracy theory as well as the overall scores.
+                    </p>
+                </div>
+                <br>
+
+                <!--Conspiracy by religion graph-->
+                <div class='row'>
+                    <div class='col-md-6' id='viz1636482475483' style='position: relative'>
+                        <noscript>
+                            <a href='#'>
+                            <img alt='Religion Dashboard ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;Conspiracy_Theory&#47;ReligionDashboard&#47;1_rss.png' style='border: none' />
+                            </a>
+                        </noscript>
+                        <object class='tableauViz'  style='display:none;'>
+                            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+                            <param name='embed_code_version' value='3' /> 
+                            <param name='site_root' value='' />
+                            <param name='name' value='Conspiracy_Theory&#47;ReligionDashboard' />
+                            <param name='tabs' value='no' /><param name='toolbar' value='yes' />
+                            <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;Conspiracy_Theory&#47;ReligionDashboard&#47;1.png' /> <param name='animate_transition' value='yes' />
+                            <param name='display_static_image' value='yes' />
+                            <param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' />
+                            <param name='display_count' value='yes' /><param name='language' value='en-US' />
+                        </object>
+                    </div>                
+                        <script type='text/javascript'>                    
+                            var divElement = document.getElementById('viz1636482475483');                    
+                            var vizElement = divElement.getElementsByTagName('object')[0];                    
+                                if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} 
+                                else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} 
+                                else { vizElement.style.width='100%';vizElement.style.height='1777px';}                     
+                            var scriptElement = document.createElement('script');                    
+                            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+                            vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+                        </script>
+            </div>
 
     <!-- Link to JS file, d3, and plotly-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
