adding a return to home button

--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -321,7 +321,7 @@
                     <div class="col-md-12">
                         <button onclick="make_pred()" class='btn btn-info'>CLICK to Calculate</button>
                         <button onClick="window.location.reload();" class='btn btn-info'>Refresh Selections</button>
-                        <br></br>
+                        <button onclick="history.back()" class='btn btn-info'>Go Back to Home Page</button>
                         <div class="col-md-12">
                             <h1 id="prediction"></h1>
                             <img id="dummy" src="../static/images/liar_liar.gif">
@@ -339,7 +339,7 @@
                 <h1>Description of Results:</h1>
                     <li>Government Malfeasance: You might believe in the malicious intent of the government.</li>
                     <br>
-                    <li>Malevolent Global Conspiracies: You might believe that world as we observe it is a hoax.</li>
+                    <li>Malevolent Global Conspiracies: You might believe that the world as we observe it is a hoax.</li>
                     <br>
                     <li>Extraterrestrial Cover Up: You might believe that aliens have already been to earth. The truth is out there!</li>
                     <br>
