--- a/static/css/predictions_style.css
+++ b/static/css/predictions_style.css
@@ -2,7 +2,8 @@ body {
   background-color: rgb(27, 27, 27);
   color: white;
   font-family: Arial, sans-serif;
-  padding: 10px;
+  padding: 5px;
+  position: absolute;
 }
 
 a {
@@ -12,6 +13,11 @@ a {
   color: white;
 }
 
+p {
+  padding-left: 5%; 
+  font-family: Verdana, sans-serif;
+}
+
 h2 {
   font-size: 40px; 
   font-weight: bold;
@@ -19,13 +25,15 @@ h2 {
   color: white;
 }
 
+
 .jumbotron {
-  background: 
-  url("../images/galaxy-1.jpg");
-  position: relative;
+  background: url("../images/galaxy-1.jpg");
   background-repeat: no-repeat;
-  background-size: cover; 
-  height: 300px;
+  background-size: cover;
+  font-family: 'Verdana', sans-serif;
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .jumbotron2 {
