Staging some final edits

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;lang=en" />
     <link rel="stylesheet" href="../static/css/style.css">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    
 
 </head>
 
@@ -92,7 +92,8 @@
                 <br>
 
                 <!--Description of graph elements-->
-                <div class="col-md-4" >
+                <div class="col-md-3" >
+                    <br>
                     <h3>Scores Based on Religion and Scores Based on Gender:</h3> 
                             <br>
                             <p>
@@ -102,7 +103,7 @@
                             </p>
                             <p>
                                 In the second chart, the averages based on gender identification can be observed. 
-                                Overall, women and other have a higher overall rating as conspiracy theorists in comparison to men. 
+                                Women and other have a higher overall rating as conspiracy theorists in comparison to men. 
                             </p>
                 </div>
             </div>
